// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Provided data as a list of objects having two methods as getTitleOfRow and getDetailsFor(givenDate)should give table consisting row for each object 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <th>
          Column1
        </th>
        <th>
          Sun Jun 03 2018
        </th>
        <th>
          Mon Jun 04 2018
        </th>
        <th>
          Tue Jun 05 2018
        </th>
        <th>
          Wed Jun 06 2018
        </th>
        <th>
          Thu Jun 07 2018
        </th>
        <th>
          Fri Jun 08 2018
        </th>
        <th>
          Sat Jun 09 2018
        </th>
      </tr>
      <tr>
        <td>
          titleOfRow
        </td>
        <td>
          Sun Jun 03 2018 09:30:00 GMT+0530 (IST)
        </td>
        <td>
          Mon Jun 04 2018 09:30:00 GMT+0530 (IST)
        </td>
        <td>
          Tue Jun 05 2018 09:30:00 GMT+0530 (IST)
        </td>
        <td>
          Wed Jun 06 2018 09:30:00 GMT+0530 (IST)
        </td>
        <td>
          Thu Jun 07 2018 09:30:00 GMT+0530 (IST)
        </td>
        <td>
          Fri Jun 08 2018 09:30:00 GMT+0530 (IST)
        </td>
        <td>
          Sat Jun 09 2018 09:30:00 GMT+0530 (IST)
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Provided title and currentWeek having starting date should give table with row having title and dates of given week as table headers 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <th>
          Column1
        </th>
        <th>
          Sun Jun 03 2018
        </th>
        <th>
          Mon Jun 04 2018
        </th>
        <th>
          Tue Jun 05 2018
        </th>
        <th>
          Wed Jun 06 2018
        </th>
        <th>
          Thu Jun 07 2018
        </th>
        <th>
          Fri Jun 08 2018
        </th>
        <th>
          Sat Jun 09 2018
        </th>
      </tr>
    </tbody>
  </table>
</div>
`;
